# MegaDrivePhysics

./: .gitignore  CMakeLists.txt
inc/: balls.h  boxes.h
res/: resources.h  resources.res
src/: balls.c  boxes.c  main.c
